<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/imgViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/desc_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/room_8_logo" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/txt_create_account"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLogo" />

    <EditText
        android:id="@+id/sign_up_et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorHintGray"
        app:layout_constraintStart_toStartOf="@+id/sign_up_et_lastname"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_lastname" />

    <EditText
        android:id="@+id/sign_up_et_firstname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/txtCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAccount" />

    <EditText
        android:id="@+id/sign_up_et_lastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/sign_up_et_firstname"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_firstname" />

    <EditText
        android:id="@+id/sign_up_et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/sign_up_et_email"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_email" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/style_button"
        android:fontFamily="@font/roboto"
        android:text="@string/btn_text_sign_up"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_et_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txt_or"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@+id/txtCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAccount" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/txt_underlined_login"
        android:textColor="@color/colorBtnBlue"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAccount" />
</android.support.constraint.ConstraintLayout>